--- a/YelpData/YelpData/templates/YelpData/user_detail.html
+++ b/YelpData/YelpData/templates/YelpData/user_detail.html
@@ -1,6 +1,7 @@
+{% extends 'YelpData/base.html' %}
 {% block content %}
 
-<h2>{{user.user_id | safe}}</h2>
+<h2>{{user.user_id}}</h2>
 
 {% if user.user_name %}
     <div class="row">
@@ -24,13 +25,13 @@
     </div>
 {% endif %}
 
-{% if user.yelp_since %}
+{% if user.yelping_since %}
     <div class="row">
         <div class="col-sm-2">
             <p>Yelp Since</p>
         </div>
         <div class="col-sm-10">
-            {{user.yelp_since | safe}}
+            {{user.yelping_since | safe}}
         </div>
     </div>
 {% endif %}
