--- a/YelpData/YelpData/templates/YelpData/base.html
+++ b/YelpData/YelpData/templates/YelpData/base.html
@@ -28,6 +28,15 @@
           <a class="nav-link" href="{% url 'users' %}">Users</a>
         </li>
         <li class="nav-item">
+            <a class="nav-link" href="{% url 'businesses' %}">Businesses</a>
+          </li>
+        <li class="nav-item">
+              <a class="nav-link" href="{% url 'reviews' %}">Reviews</a>
+            </li>
+          <li class="nav-item">
+              <a class="nav-link" href="{% url 'photos' %}">Photo</a>
+            </li> 
+        <li class="nav-item">
           <a class="nav-link" href="{% url 'about' %}">About</a>
         </li>
       </ul>
