--- a/YelpData/YelpData/templates/YelpData/business.html
+++ b/YelpData/YelpData/templates/YelpData/business.html
@@ -1,8 +1,8 @@
-
+{% extends 'YelpData/base.html' %}
 {% block content %}
 <article>
     <header>
-        <h2> User Inforamtion </h2>
+        <h2> Business Information </h2>
     </header>
 
     <nav>
@@ -46,11 +46,15 @@
     </nav>    
 
     {% if businesses %}
-    <ul>
-        <li><a href="{% url 'business_detail' business.pk %}">{{ business.business_id | safe }}</a></li>
-    </ul>
-    {% else %}
-        <p>No Businesses' information are available to view.</p>
+        {% for business in businesses %}
+            <ul>
+                <li><a href="{% url 'business_detail' business.pk %}">{{ business.business_name | safe }}</a></li>
+            </ul>
+        {% empty %}
+            <p>No Businesses' information are available to view.</p>
+        {% endfor %}
+        <p>page count: {{ businesses.count }}</p>
     {% endif %}
-    <p>page count: {{ businesses.count }}</p>
 </article>
+{% endblock content %}
+    
