--- a/YelpData/YelpData/templates/YelpData/base.html
+++ b/YelpData/YelpData/templates/YelpData/base.html
@@ -33,6 +33,9 @@
         <li class="nav-item">
               <a class="nav-link" href="{% url 'reviews' %}">Reviews</a>
             </li>
+        <li class="nav-item">
+              <a class="nav-link" href="{% url 'tips' %}">Tips</a>
+            </li>
           <li class="nav-item">
               <a class="nav-link" href="{% url 'photos' %}">Photo</a>
             </li> 
