--- a/YelpData/YelpData/templates/YelpData/business_detail.html
+++ b/YelpData/YelpData/templates/YelpData/business_detail.html
@@ -27,13 +27,13 @@
     </div>
 {% endif %}
 
-{% if business.location_id %}
+{% if business.location %}
     <div class="row">
         <div class="col-sm-2">
             <p>Location</p>
         </div>
         <div class="col-sm-10">
-           <li> <a href="{% url 'location_detail' location.pk %}">{{ business.location | safe }} </a> <li>
+            {{ business.location | safe }}
         </div>
     </div>
 {% endif %}
