--- a/YelpData/YelpData/templates/YelpData/photo_detail.html
+++ b/YelpData/YelpData/templates/YelpData/photo_detail.html
@@ -1,4 +1,4 @@
-{% enxtend 'YelpData/base.html' %}
+{% extends 'YelpData/base.html' %}
 {% block content %}
 
 <h2>{{photo.photo_id}}</h2>
@@ -9,7 +9,7 @@
             <p>Business ID</p>
         </div>
         <div class="col-sm-10">
-            <li> <a href="{% url 'business_detail' business.pk %}">{{ photo.business_id | safe }}</a> <li>
+            <p>{{ photo.business_id | safe }} </p>
         </div>
     </div>
 {% endif %}
