--- a/YelpData/YelpData/templates/YelpData/review.html
+++ b/YelpData/YelpData/templates/YelpData/review.html
@@ -2,7 +2,7 @@
 {% block content %}
 <article>
     <header>
-        <h2> User Information </h2>
+        <h2> Review Information </h2>
     </header>
 
     <nav>
