--- a/YelpData/YelpData/templates/YelpData/base.html
+++ b/YelpData/YelpData/templates/YelpData/base.html
@@ -19,8 +19,8 @@
   <body>
 
     <!-- A grey horizontal navbar that becomes vertical on small screens -->
-    <nav class="navbar navbar-expand-sm navbar-dark navbar-custom p-0">
-
+    <nav class="navbar navbar-expand-sm navbar-dark navbar-custom sticky-top px-4 py-2">
+     <div class="row">
       <a class="navbar-brand" href="{% url 'home' %}">Yelp Data</a>
 
       <ul class="navbar-nav">
@@ -42,10 +42,15 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'about' %}">About</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'login' %}">login</a>
+        </li>
       </ul>
+      </div>
     </nav>
+    
 
-    <main>
+     <main class="px-4 py-3">
       <div class="container-fluid">
         {% block content %}
 
@@ -53,7 +58,7 @@
       </div>
     </main>
 
-    <footer>
+    <footer class="px-4 py-2">
       <p>Copyright &copy; 2018 <a href="mailto:tyrozty@umich.edu">Tianyu Zhang</a></p>
     </footer>
 
