--- a/YelpData/YelpData/templates/YelpData/photo.html
+++ b/YelpData/YelpData/templates/YelpData/photo.html
@@ -1,49 +1,13 @@
 {% extends 'YelpData/base.html' %}
 {% block content %}
+{% if user.is_authenticated %}
 <article>
     <header>
         <h2> Photo Inforamtion </h2>
     </header>
 
-    <nav>
-        {% if is_paginated %}
-            <ul class="pagination justify-content-center">
-                {% if page_obj.has_previous %}
-                    <li class="page-item">
-                            <a class="page-link" href="?page={{ page_obj.previous_page_number }}"aria-label="Previous">
-                                <span aria-hidden="true">&laquo;</span>
-                                <span class="sr-only">Previous</span>
-                            </a>
-                    </li>
-                {% else %}
-                    <li class="page-item disabled"><span>&laquo;</span></li>
-                {% endif %}
+    {% include 'YelpData/pagination.html' %} 
 
-                {% for i in paginator.page_range %}
-                    {% if page_obj.number == i %}
-                        <li class="page-item active">
-                            <span>{{ i }}
-                                <span class="sr-only">(current)</span>
-                            </span>
-                        </li>
-                    {% else %}
-                        <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
-                    {% endif %}
-                {% endfor %}
-
-            {% if page_obj.has_next %}
-                <li class="page-item"></li>
-                    <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next"></a>
-                        <span aria-hidden="true">&raquo;</span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </li>
-            {% else %}
-                <li class="page-item disabled"><span>&raquo;</span></li>
-            {% endif %}
-            </ul>
-        {% endif %}
-    </nav>    
     {% if photos %}
         {% for photo in photos %}
             <ul>
@@ -54,6 +18,6 @@
         {% endfor %}
         <p>page count: {{ photos.count }}</p>
     {% endif %}
-   
 </article>
+{% endif %}
 {% endblock content %}
