--- a/YelpData/YelpData/templates/YelpData/user_detail.html
+++ b/YelpData/YelpData/templates/YelpData/user_detail.html
@@ -1,7 +1,23 @@
 {% extends 'YelpData/base.html'%}
 {% block content %}
 
-<h2>{{user.user_id}}</h2>
+<header>
+    <div class="row">
+        <div class="col-sm-10">
+        <h2>{{ site.site_name | safe }}</h2>
+        </div>
+        <div class="col-xs-1">
+        {% if user.is_authenticated %}
+            <a class="btn btn-outline-secondary" href="{% url 'user_update' user.pk %}">edit</a>
+        {% endif %}
+        </div>
+        <div class="col-xs-1">
+        {% if user.is_authenticated %}
+            &nbsp;<a class="btn btn-outline-warning" href="{% url 'user_delete' user.pk %}">delete</a>
+        {% endif %}
+        </div>
+    </div>
+</header>
 
 {% if user.user_name %}
     <div class="row">
