--- a/YelpData/YelpData/templates/YelpData/base.html
+++ b/YelpData/YelpData/templates/YelpData/base.html
@@ -25,19 +25,19 @@
 
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'users' %}">Users</a>
+          <a class="nav-link" href="{% url 'user' %}">Users</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="{% url 'businesses' %}">Businesses</a>
+            <a class="nav-link" href="{% url 'business' %}">Businesses</a>
           </li>
         <li class="nav-item">
-              <a class="nav-link" href="{% url 'reviews' %}">Reviews</a>
+              <a class="nav-link" href="{% url 'review' %}">Reviews</a>
             </li>
         <li class="nav-item">
-              <a class="nav-link" href="{% url 'tips' %}">Tips</a>
+              <a class="nav-link" href="{% url 'tip' %}">Tips</a>
             </li>
           <li class="nav-item">
-              <a class="nav-link" href="{% url 'photos' %}">Photo</a>
+              <a class="nav-link" href="{% url 'photo' %}">Photo</a>
             </li> 
         <li class="nav-item">
           <a class="nav-link" href="{% url 'about' %}">About</a>
