--- a/YelpData/YelpData/templates/YelpData/user_detail.html
+++ b/YelpData/YelpData/templates/YelpData/user_detail.html
@@ -4,7 +4,7 @@
 <header>
     <div class="row">
         <div class="col-sm-10">
-        <h2>{{ site.site_name | safe }}</h2>
+        <h2>{{ user.user_name | safe }}</h2>
         </div>
         <div class="col-xs-1">
         {% if user.is_authenticated %}
@@ -26,6 +26,17 @@
         </div>
         <div class="col-sm-10">
             {{user.user_name | safe}}
+        </div>
+    </div>
+{% endif %}
+
+{% if user.user_identifier %}
+    <div class="row">
+        <div class="col-sm-2">
+            <p>User Yelp ID</p>
+        </div>
+        <div class="col-sm-10">
+            {{user.user_identifier | safe}}
         </div>
     </div>
 {% endif %}
