--- a/YelpData/YelpData/templates/YelpData/home.html
+++ b/YelpData/YelpData/templates/YelpData/home.html
@@ -4,6 +4,7 @@
 
 <h2>Yelp Data</h2>
 
-<p>TODO: add overview later.</p>
+<p> This application is developed for the Yelp Data analysis </p>
+
 
 {% endblock content %}
