--- a/YelpData/YelpData/templates/YelpData/user_update.html
+++ b/YelpData/YelpData/templates/YelpData/user_update.html
@@ -51,7 +51,7 @@
     </div>
   
 
-  <button type="submit" class="btn btn-outline-success">Update</button>
+  <button type="submit" class="btn btn-outline-success">update</button>
   &nbsp;<a class="btn btn-outline-secondary" href=" 'user' %}">cancel</a >
 
 </form>
