--- a/YelpData/YelpData/templates/YelpData/base.html
+++ b/YelpData/YelpData/templates/YelpData/base.html
@@ -34,6 +34,9 @@
         <li class="nav-item">
             <a class="nav-link" href="{% url 'business' %}">Businesses</a>
           </li>
+          <li class="nav-item">
+              <a class="nav-link" href="{% url 'location' %}">Locations</a>
+            </li>
         <li class="nav-item">
               <a class="nav-link" href="{% url 'review' %}">Reviews</a>
             </li>
