--- a/YelpData/YelpData/templates/YelpData/location_detail.html
+++ b/YelpData/YelpData/templates/YelpData/location_detail.html
@@ -1,73 +1,73 @@
-{% extends 'YelpData/base.html' %}
+{% extends 'YelpData/base.html'%}
 {% block content %}
 
-<h2> {{tip.tip_id | safe}} </h2>
+<h2>{{ location.location_identifier }}</h2>
 
-{% if tip.tip_id %}
+{% if location_location_id %}
     <div class="row">
         <div class="col-sm-2">
-            <p> Tip ID </p>
+            <p>Location ID</p>
         </div>
         <div class="col-sm-10">
-            <p>{{ tip.tip_id }}</p>
+            {{ location.location_id | safe}}
         </div>
     </div>
 {% endif %}
 
-{% if tip.user_id %}
+{% if location.city %}
     <div class="row">
         <div class="col-sm-2">
-            <p>User ID</p>
+            <p> City </p>
         </div>
         <div class="col-sm-10">
-            <p>{{ tip.user_id | safe }}</p>
+            {{ location.city | safe}}
         </div>
     </div>
 {% endif %}
 
-{% if tip.business_id %}
+{% if location.state %}
     <div class="row">
         <div class="col-sm-2">
-            <p>Business ID</p>
+            <p> State </p>
         </div>
         <div class="col-sm-10">
-            <p>{{ tip.business_id | safe }}</p>
+            {{ location.state | safe}}
         </div>
     </div>
 {% endif %}
 
-{% if tip.date %}
+{% if location.postal_code %}
     <div class="row">
         <div class="col-sm-2">
-            <p> Tip Date </p>
+            <p> Postal Code </p>
         </div>
         <div class="col-sm-10">
-            <p>{{ tip.date }}</p>
+            {{ location.postal_code | safe}}
         </div>
     </div>
 {% endif %}
 
-{% if tip.likes %}
+{% if location.latitude %}
     <div class="row">
         <div class="col-sm-2">
-            <p> Likes </p>
+            <p> Latitude </p>
         </div>
         <div class="col-sm-10">
-            <p>{{ tip.likes }}</p>
+            {{ location.latitude | safe}}
         </div>
     </div>
 {% endif %}
 
-
-{% if tip.text %}
+{% if location.longitude %}
     <div class="row">
         <div class="col-sm-2">
-            <p>Business ID</p>
+            <p> Longitude </p>
         </div>
         <div class="col-sm-10">
-            <p>{{ tip.text | safe }}</p>
+            {{ location.longitude | safe}}
         </div>
     </div>
 {% endif %}
 
+        
 {% endblock content %}
