--- a/YelpData/YelpData/templates/YelpData/photo_detail.html
+++ b/YelpData/YelpData/templates/YelpData/photo_detail.html
@@ -1,7 +1,19 @@
 {% extends 'YelpData/base.html' %}
 {% block content %}
 
-<h2>{{photo.photo_id}}</h2>
+<h2>{{photo.photo_identifier}}</h2>
+
+{% if photo.photo_id %}
+    <div class="row">
+        <div class="col-sm-2">
+            <p>Photo ID</p>
+        </div>
+        <div class="col-sm-10">
+            <p>{{ photo.pthoto_id | safe }} </p>
+        </div>
+    </div>
+{% endif %}
+
 
 {% if photo.business_id %}
     <div class="row">
