needs to be modified on create and updata

--- a/YelpData/YelpData/templates/YelpData/about.html
+++ b/YelpData/YelpData/templates/YelpData/about.html
@@ -4,6 +4,7 @@
 
 <h2>About Yelp Data</h2>
 
-<p>The Yelp Data comes from <a href="https://www.yelp.com/dataset/challenge"></a>
-</p>
+<p>The Yelp Data comes from <a href="https://www.yelp.com/dataset/challenge">Original Data</a></p>
+<p>The description of the data is <a href="https://www.yelp.com/dataset/documentation/main">Data Description</a></p>
+
 {% endblock content %}
